chore: Update docker-compose.yml for frontend service and MongoDB volume path

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,15 @@
 version: '3'
+
 services:
+  front:
+    image: node:20.11
+    volumes:
+      - ./frontend:/app
+    working_dir: /app
+    command: npm run dev
+    ports:
+      - 5173:5173
+
   mongodb:
     image: mongo:latest
     container_name: mongodb
@@ -8,7 +18,7 @@ services:
     ports:
       - '27017-27019:27017-27019'
     volumes:
-      - ../data/mongodb_data:/data/db
+      - ./data/mongodb_data:/data/db
 
 volumes:
   mongodb_data_container:
