--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -26,6 +26,14 @@ jobs:
 
       - name: Auth with your back4app account
         run: echo ${{ secrets.BACK4APP_ACCOUNT_KEY }} | b4a configure accountkey
-      
+
+      - name: Update applicationId in parse.local
+        run: |
+          # Read applicationId of github secret
+          applicationId=${{ secrets.APPLICATION_ID }}
+
+          # Update the file parse.local with new applicationId
+          jq --arg applicationId "$applicationId" '.applications.visualizaai.applicationId = $applicationId' parse.local > parse.local.tmp && mv parse.local.tmp parse.local
+
       - name: Deploy your app
         run: b4a deploy ${{ secrets.BACK4APP_APP_NAME } -d
