feat: Refactor login and createCheckoutSession cloud functions (#3)
* feat: Refactor login and createCheckoutSession cloud functions

The code changes include refactoring the `login` and `createCheckoutSession` cloud functions in the backend. This improves code readability and maintainability.

* refactor: Refactor login and createCheckoutSession cloud functions

* refactor: Refactor login and createCheckoutSession cloud functions

* chore: Update deploy-backend.yml to include app name in b4a deploy command

* refactor: Remove unused backend configuration file

The code changes involve deleting the `config.json` file in the backend directory. This file was no longer needed and has been removed to declutter the repository.

* refactor: Remove unused backend configuration file

* refactor: Update deploy-backend.yml to include app name in b4a deploy command

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -1,15 +1,39 @@
-name: Github Pages Publish
+name: Back4app deploy
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - 'v**'
+      - '!v**-alpha'
+      - '!v**-beta'
+      - '!v**-rc'
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: jinjat-data/gh-pages-deploy-action@v1.0
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
         with:
-          access-token: ${{ secrets.GITHUB_TOKEN }}
-          source-directory: backend/public
+          node-version: '14'
+
+      - name: Install dependencies
+        run: curl https://raw.githubusercontent.com/back4app/parse-cli/back4app/installer.sh | sudo /bin/bash
+
+      - name: Auth with your back4app account
+        run: echo ${{ secrets.BACK4APP_ACCOUNT_KEY }} | b4a configure accountkey
+
+      - name: Update applicationId in parse.local
+        run: |
+          # Read applicationId of github secret
+          applicationId=${{ secrets.APPLICATION_ID }}
+
+          # Update the file parse.local with new applicationId
+          jq --arg applicationId "$applicationId" '.applications.visualizaai.applicationId = $applicationId' parse.local > parse.local.tmp && mv parse.local.tmp parse.local
+
+      - name: Deploy your app
+        run: b4a deploy ${{ secrets.BACK4APP_APP_NAME } -d
