--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -16,10 +16,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
+      - name: Access backend folder
+        run: cd backend
 
       - name: Install dependencies
         run: curl https://raw.githubusercontent.com/back4app/parse-cli/back4app/installer.sh | sudo /bin/bash
@@ -33,7 +31,7 @@ jobs:
           applicationId=${{ secrets.APPLICATION_ID }}
 
           # Update the file parse.local with new applicationId
-          jq --arg applicationId "$applicationId" '.applications.visualizaai.applicationId = $applicationId' parse.local > parse.local.tmp && mv parse.local.tmp parse.local
+          jq --arg applicationId "$applicationId" '.applications.visualizaai.applicationId = $applicationId' .parse.local > .parse.local.tmp && mv .parse.local.tmp .parse.local
 
       - name: Deploy your app
         run: b4a deploy ${{ secrets.BACK4APP_APP_NAME }}
