--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           cd backend
 
-          # Verificar se o arquivo .parse.local existe
+          # check if .parse.local file exists
           if [ ! -f .parse.local ]; then
             echo "Error: .parse.local file not found"
             exit 1
