--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -19,6 +19,8 @@ jobs:
           node-version: '20'
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
+      - name: Go to file directory
+        run: cd ./website
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
       - name: Build Project Artifacts
