chore: Update deploy-website.yml to include dev branch in the push trigger

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -3,6 +3,8 @@ env:
   VERCEL_PROJECT_ID: ${{ secrets.WEBSITE_VERCEL_PROJECT_ID_PRODUCTION }}
 on:
   push:
+    branches:
+      - dev
     tags:
       - 'v**'
       - '!v**-alpha'
