chore: Include dev branch in the push trigger for deploy-website.yml

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -2,6 +2,9 @@ name: Vercel Production Deployment
 env:
   VERCEL_PROJECT_ID: ${{ secrets.WEBSITE_VERCEL_PROJECT_ID_PRODUCTION }}
 on:
+  create:
+    branches:
+      - dev
   push:
     branches:
       - dev
