--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -2,9 +2,8 @@ name: Vercel Production Deployment
 env:
   VERCEL_PROJECT_ID: ${{ secrets.WEBSITE_VERCEL_PROJECT_ID_PRODUCTION }}
 on:
-  create:
-    branches:
-      - dev
+  pull_request:
+    branches: [ "dev" ]
   push:
     branches:
       - dev
