--- a/website/package.json
+++ b/website/package.json
@@ -12,7 +12,7 @@
     "@dotlottie/react-player": "^1.6.17",
     "@rive-app/react-canvas": "^4.8.3",
     "clsx": "^2.1.0",
-    "next": "^14.1.0",
+    "next": "latest",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
