--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@parse/react": "^0.0.1-alpha.18",
+    "caniuse-lite": "",
     "clsx": "^2.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
