refactor: Update manifest.json with improved app description and icons

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -2,7 +2,7 @@
   "short_name": "Visualiza ai",
   "name": "Visualiza ai",
   "start_url": ".",
-  "description": "O VisualizaAi é a solução perfeita para transformar a experiência dos seus clientes ao acessar o seu cardápio. Com nosso aplicativo, você pode criar cardápios digitais de forma rápida e intuitiva, sem complicações. Basta alguns cliques e você terá um cardápio moderno e interativo, pronto para ser compartilhado.",
+  "description": "O VisualizaAi é a solução perfeita para transformar a experiência dos seus clientes ao acessar o seu cardápio. Com nosso aplicativo, você pode criar cardápios digitais de forma rápida e intuitiva, sem complicações. Basta alguns cliques e você terá um cardápio moderno e interativo",
   "icons": [
     {
       "src": "/icons/icon.svg",
