chore: Update image and frame styling in Blog page

--- a/frontend/.env.dist
+++ b/frontend/.env.dist
@@ -4,6 +4,8 @@ VITE_PARSE_JAVASCRIPT_KEY=
 
 VITE_PARSE_HOST_URL=https://parseapi.back4app.com/
 
+VITE_CLIENT_URL=
+
 VITE_PHONE_NUMBER=
 
 VITE_CLARITY_ID=
