refact: finish formatter settings

--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -1,13 +1,9 @@
 {
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "src/*"
-      ]
-    }
-  },
-  "types": [
-    "node"
-  ]
+    "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["src/*"]
+        }
+    },
+    "types": ["node"]
 }
