issue-54/feat: clients can set name in order message (#55)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,10 @@
         "clsx": "^2.0.0",
         "html2canvas": "^1.4.1",
         "jspdf": "^2.5.1",
+        "lodash": "^4.17.21",
         "lottie-react": "^2.4.0",
         "parse": "^4.3.1",
+        "posthog-js": "^1.160.0",
         "qr-code-styling": "^1.6.0-rc.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
