--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,9 @@ services:
 
   mongodb:
     image: mongo:latest
-    container_name: mongodb
+    container_name: tonaweb-mongodb
     environment:
-      - MONGO_INITDB_DATABASE=example
+      - MONGO_INITDB_DATABASE=tonaweb-db
     ports:
       - '27017-27019:27017-27019'
     volumes:
