--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@auth0/auth0-react": "^2.2.4",
         "@mdx-js/react": "^3.0.1",
         "@mdx-js/rollup": "^3.0.1",
         "@parse/react": "^0.0.1-alpha.18",
